--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,97 @@
-@import '~bootstrap/scss/bootstrap';
+@import 'animation.scss';
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: black;
+}
+
+// back to top arrow
+#back-to-top {
+  position: fixed;
+  right: 4vw;
+  bottom: 1rem;
+  border: solid rgba(241, 231, 254, 1);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 10px;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+// all main content
+.content {
+  padding: 2rem;
+  border-radius: 15px;
+  background-color: rgba(241, 231, 254, 1);
+  margin: 0 12vw;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+section {
+  border-top: 1px solid grey;
+  padding: 1rem;
+  flex-wrap: nowrap;
+  h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+}
+
+#about {
+  display: inline-block;
+
+  p {
+    padding: 1rem;
+  }
+}
+
+img {
+  max-width: 100%;
+  max-height: 300px;
+  margin: 1rem;
+  border-radius: 5px;
+  border: 1px solid black;
+  float: left;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 8vh;
+  background-color: black;
+  a {
+    color: lavender;
+    text-decoration: none;
+    &:hover {
+      color: white;
+      text-shadow: 0 0 3px white;
+    }
+  }
+}
+
+header {
+  align-items: center;
+  background-image: url("assets/img/header-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 200px rgba(0,0,0,1) inset;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  height: 92vh;
+}
