--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -141,6 +141,11 @@ header {
   padding: 1.4rem;
   margin: 0 2vw 0 8vw;
 
+  // column one
+  .contact-info {
+    width: 40vw;
+  }
+
   .arrow {
     width: 5rem;
   }
@@ -163,7 +168,6 @@ header {
     position: absolute;
     right: 100%;
     top: 26px;
-    width: 0;
     height: 0;
     border-top: 13px solid transparent;
     border-right: 26px solid $background;
@@ -173,6 +177,7 @@ header {
   .art-portfolio {
     padding: 2rem;
     h2 {
+      text-align: left;
       color: $background;
     }
     img {
@@ -188,9 +193,15 @@ header {
     }
   }
 
+  // column two
   .other-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     padding: .5rem;
     height: 500px;
+    width: 40vw;
     a {
       text-decoration: none;
     }
