--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,1 +1,212 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+body {
+}
+
+/* // back to top arrow */
+#back-to-top {
+  position: fixed;
+  right: 2.5vw;
+  bottom: 1rem;
+  border: solid rgba(241, 231, 254, 1);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 10px;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.content-wrap {
+  background-color: black;
+}
+
+/* // all main content */
+.content {
+  padding: 2rem;
+  border-radius: 8px;
+  margin: 0 8vw;
+  background-color: rgba(241, 231, 254, 1);
+
+}
+
+.credits {
+  padding: 1rem 0;
+  font-size: .7rem;
+  text-align: right;
+  margin-right: 8vw;
+  color: rgba(241, 231, 254, 1);
+}
+
+.credits a {
+  color: rgba(241, 231, 254, 1);
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+section {
+  border-top: 1.3px solid grey;
+  padding: 1rem;
+  flex-wrap: nowrap;
+}
+section h2 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+#about {
+  display: inline-block;
+}
+
+#about p {
+  padding: 1rem;
+}
+
+#skills {
+  text-align: center;
+}
+
+#projects {
+
+}
+
+#contact {
+  margin-top: 2rem;
+  border: none;
+  background: rgba(241, 231, 254, .6);
+}
+#contact h1 {
+  text-align: left;
+  margin-left: 8vw;
+  color: white;
+  text-shadow: 3px 3px black;
+}
+
+img {
+  max-width: 100%;
+  max-height: 300px;
+  margin: 1rem;
+  border-radius: 5px;
+  border: 1px solid black;
+  float: left;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 8vh;
+  background-color: black;
+}
+nav a {
+  font-size: 1.3rem;
+  color: lavender;
+  text-decoration: none;
+
+}
+nav a:hover,
+.art-portfolio a p:hover,
+.other-links a:hover {
+  color: white;
+  text-shadow: 0 0 3px white;
+}
+
+header {
+  background-image: url("../img/header-bg.jpg");
+  box-shadow: 0 0 200px rgba(0,0,0,1) inset;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  height: 92vh;
+}
+
+/* // contact information */
+
+.info {
+  display: flex;
+  margin-top: 1rem;
+  padding: 1.4rem;
+  margin: 0 2vw 0 8vw;
+}
+
+.info img {
+  border: none;
+}
+/* // column one */
+.contact-info {
+  width: 40vw;
+}
+
+.arrow {
+  width: 5rem;
+}
+
+#talkbubble {
+  color: black;
+  height: 300px;
+  background: rgba(241, 231, 254, 1);
+  position: relative;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  box-shadow: 5px 5px black;
+}
+#talkbubble img {
+  width: 2rem;
+  border: none;
+}
+#talkbubble:before {
+  content: "";
+  position: absolute;
+  right: 100%;
+  top: 26px;
+  height: 0;
+  border-top: 13px solid transparent;
+  border-right: 26px solid rgba(241, 231, 254, 1);
+  border-bottom: 13px solid transparent;
+}
+
+.art-portfolio {
+  padding: 2rem;
+}
+.art-portfolio h2 {
+  text-align: left;
+  color: rgba(241, 231, 254, 1);
+}
+.art-portfolio img {
+  margin: 0;
+}
+.art-portfolio a {
+    text-decoration: none;
+    color: rgba(241, 231, 254, 1);
+  }
+
+  /* // column two */
+.other-links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: .5rem;
+  height: 500px;
+  width: 40vw;
+}
+.other-links a {
+  color: rgba(241, 231, 254, 1);
+  text-decoration: none;
+}
