--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -31,6 +31,26 @@ p {
   margin-right: 0;
 }
 
+.languages i, .frameworks i {
+  font-size: 4rem;
+  display: flex;
+  margin: 1rem;
+  flex-direction: column;
+}
+
+.languages i p, .frameworks i p{
+  color: black;
+  position: relative;
+  bottom: 5.5rem;
+  margin: .3rem;
+  font-size: .75rem;
+  height:1rem;
+}
+
+.skills-subheader h3{
+  margin: 1rem;
+}
+
 body {
 }
 
