--- a/assets/styles/skills.css
+++ b/assets/styles/skills.css
@@ -3,20 +3,34 @@
 }
 
 .languages i, .frameworks i {
+  transition: font-size 0.5s;
   font-size: 4rem;
   display: flex;
   margin: 1rem;
   flex-direction: column;
 }
 
+.languages i:hover, .frameworks i:hover {
+  transition: font-size 0.5s;
+  font-size: 5rem;
+}
+
 .languages i p, .frameworks i p{
   color: black;
   position: relative;
-  bottom: 5.5rem;
+  bottom: 6rem;
   font-size: .75rem;
   height:1rem;
 }
 
-.skills-subheader h3{
-  margin: 1rem;
+.skills-subheader {
+  margin: 1.5rem;
+}
+
+#skills .section-header {
+  margin-bottom: 0.75rem;
+}
+
+.technologies {
+  padding-left: 1rem;
 }
