--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -18,7 +18,8 @@ light dusty pink: #ddb8ba
 */
 
 section {
-  margin: 2rem 0;
+  padding: 5rem 0;
+  border-bottom: 0.5px solid #B0B0B0;
 }
 
 hr {
@@ -32,6 +33,12 @@ p {
 * {
   margin: 0;
   padding: 0;
+}
+
+.elipses {
+  border: none;
+  padding: 2rem 0;
+  text-align: center;
 }
 
 .header {
@@ -64,10 +71,6 @@ p {
   margin-right: 0;
 }
 
-.fade-scroll {
-  opacity: 1;
-}
-
 body {
 }
 
@@ -80,12 +83,6 @@ a {
 /* // all main content */
 .content {
   background-color: #FFFFFF;
-}
-
-section {
-  /* border-top: 1.3px solid grey; */
-  padding: 1rem;
-  flex-wrap: nowrap;
 }
 
 img {
@@ -118,7 +115,7 @@ img {
   position: fixed;
   right: 2.5vw;
   bottom: 1.3rem;
-  border: solid rgba(241, 231, 254, 1);
+  border: solid black;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 10px;
@@ -126,7 +123,7 @@ img {
   -webkit-transform: rotate(-135deg);
 }
 #btt-text {
-  color: white;
+  color: black;
   position: fixed;
   right: 1.7vw;
   bottom: 1px;
