--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -1,19 +1,19 @@
-#projects .section-header {
-  margin-left: 12vw;
-  margin-bottom: 4rem;
-  font-size: 6vw;
-  color: #B87D83;
+#projects {
+  text-align: center;
 }
 
 .projects {
+  background-color: #FFFFFF;
   display: inline-block;
+  text-align: center;
 }
 
 .project {
   display: flex;
   justify-content: space-around;
-  margin: 2rem;
-  margin-bottom: 8rem;
+  margin: 5rem;
+  margin-bottom: 3rem;
+  border-radius: 20px;
 }
 
 .left {
