--- a/assets/styles/values.css
+++ b/assets/styles/values.css
@@ -7,14 +7,15 @@
   padding-left: 2rem;
   padding-right: 2rem;
   position: relative;
-  color: black;
+  color: #000000;
+  border-bottom: none;
 }
 
 .values {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  align-items: left;
+  margin-top: 2rem;
 }
 
 .values img {
