--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,7 +13,7 @@ white: #FFFFFF
 black: 	#000000
 
 dark dusty rose: #B87D83;
-dusty pink: #DBBEBB
+dusty pink: #CDA4A8
 light dusty pink: #ddb8ba
 */
 
@@ -33,6 +33,14 @@ p {
 * {
   margin: 0;
   padding: 0;
+}
+
+.block {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 700px;
+  background-color: #CDA4A8;
 }
 
 .elipses {
@@ -92,18 +100,6 @@ img {
   border-radius: 5px;
   border: 1px solid black;
   float: left;
-}
-
-/* buttons */
-
-.btn-primary {
-  background-color: rgb(128,0,128);
-  border: none;
-  max-width: 200px;
-}
-
-.btn-primary:hover {
-  background-color: rgb(155,51,153);
 }
 
 .arrow {
